ADDED : swagger implementation in all the controllers
