# app/Http/Controllers/NoteController.php
@@ -4,7 +4,6 @@ namespace App\Http\Controllers;
 
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Auth;
-use App\Models\User;
 use App\Models\NotesModel;
 use Exception;
 use Illuminate\Support\Facades\DB;
@@ -12,9 +11,57 @@ use Illuminate\Support\Facades\DB;
 class NoteController extends Controller
 {
     /**
-     * function to create new note based on authentication
+     * @OA\Post(
+     ** path="/api/auth/addNotes",
+     *   tags={"Add Notes"},
+     *   summary="Add notes",
+     *   operationId="AddNotes",
      * 
-     * @return response
+     *  
+     *  @OA\Parameter(
+     *      name="Note Title",
+     *      in="query",
+     *      required=true,
+     *      @OA\Schema(
+     *           type="string"
+     *      )
+     *   ),
+     *  @OA\Parameter(
+     *      name="Description",
+     *      in="query",
+     *      required=true,
+     *      @OA\Schema(
+     *           type="string"
+     *      )
+     *   ),
+     *   @OA\Response(
+     *      response=201,
+     *       description="Success",
+     *      @OA\MediaType(
+     *           mediaType="application/json",
+     *      )
+     *   ),
+     *   @OA\Response(
+     *      response=401,
+     *       description="Unauthenticated"
+     *   ),
+     *   @OA\Response(
+     *      response=400,
+     *      description="Bad Request"
+     *   ),
+     *   @OA\Response(
+     *      response=404,
+     *      description="not found"
+     *   ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      )
+     *)
+     **/
+    /**
+     *
+     * @return \Illuminate\Http\Response
      */
     public function createNote(Request $request)
     {
@@ -31,9 +78,40 @@ class NoteController extends Controller
     }
 
     /**
-     * function to get all the notes of the user
+     * @OA\Get(
+     ** path="/api/auth/getNotes",
+     *   tags={"Get Notes"},
+     *   summary="Get notes",
+     *   operationId="GetNotes",
      * 
-     * @return notes tables data with respective to the authorization
+     *   @OA\Response(
+     *      response=201,
+     *       description="Success",
+     *      @OA\MediaType(
+     *           mediaType="application/json",
+     *      )
+     *   ),
+     *   @OA\Response(
+     *      response=401,
+     *       description="Unauthenticated"
+     *   ),
+     *   @OA\Response(
+     *      response=400,
+     *      description="Bad Request"
+     *   ),
+     *   @OA\Response(
+     *      response=404,
+     *      description="not found"
+     *   ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      )
+     *)
+     **/
+    /**
+     *
+     * @return \Illuminate\Http\Response
      */
     public function getNotes()
     {
@@ -47,10 +125,64 @@ class NoteController extends Controller
     }
 
     /**
-     * function used to update the particular note based on authorization and note id
-     * @param $id input from user
+     * @OA\Post(
+     ** path="/api/auth/updateNote",
+     *   tags={"Update Notes"},
+     *   summary="Update Notes",
+     *   operationId="updateNote",
      * 
-     * @return note updated message or error based on request
+     *  @OA\Parameter(
+     *      name="Note id",
+     *      in="query",
+     *      required=true,
+     *      @OA\Schema(
+     *           type="string"
+     *      )
+     *   ),
+     *  @OA\Parameter(
+     *      name="title",
+     *      in="query",
+     *      required=true,
+     *      @OA\Schema(
+     *           type="string"
+     *      )
+     *   ),
+     *  @OA\Parameter(
+     *      name="Description",
+     *      in="query",
+     *      required=true,
+     *      @OA\Schema(
+     *           type="string"
+     *      )
+     *   ),
+     *   @OA\Response(
+     *      response=201,
+     *       description="Success",
+     *      @OA\MediaType(
+     *           mediaType="application/json",
+     *      )
+     *   ),
+     *   @OA\Response(
+     *      response=401,
+     *       description="Unauthenticated"
+     *   ),
+     *   @OA\Response(
+     *      response=400,
+     *      description="Bad Request"
+     *   ),
+     *   @OA\Response(
+     *      response=404,
+     *      description="not found"
+     *   ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      )
+     *)
+     **/
+    /**
+     *
+     * @return \Illuminate\Http\Response
      */
     public function updateNote(Request $request)
     {
@@ -69,9 +201,48 @@ class NoteController extends Controller
     }
 
     /**
-     * function used to delete particular note based on authorization and request
-     * 
-     * @return note deleted message or exception based on request
+     * @OA\Post(
+     ** path="/api/auth/deleteNote",
+     *   tags={"Delete Note"},
+     *   summary="Delete Note",
+     *   operationId="deleteNote",
+     *
+     *  @OA\Parameter(
+     *      name="Note id",
+     *      in="query",
+     *      required=true,
+     *      @OA\Schema(
+     *           type="string"
+     *      )
+     *   ),
+     *   @OA\Response(
+     *      response=201,
+     *       description="Success",
+     *      @OA\MediaType(
+     *           mediaType="application/json",
+     *      )
+     *   ),
+     *   @OA\Response(
+     *      response=401,
+     *       description="Unauthenticated"
+     *   ),
+     *   @OA\Response(
+     *      response=400,
+     *      description="Bad Request"
+     *   ),
+     *   @OA\Response(
+     *      response=404,
+     *      description="not found"
+     *   ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      )
+     *)
+     **/
+    /**
+     *
+     * @return \Illuminate\Http\Response
      */
     public function deleteNote(Request $request)
     {
